Fix top padding on mobile layout

--- a/hugo/themes/hugo-clarity/assets/sass/_mobile.sass
+++ b/hugo/themes/hugo-clarity/assets/sass/_mobile.sass
@@ -84,7 +84,8 @@
     padding-top: 2em
 
   .content, .footer
-    padding: 0
+    padding-left: 0
+    padding-right: 0
   article
     border-radius: 0
     margin: 0
